logs/delicious-cake.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/delicious_cake'...
Compiling './lib/python3.5/site-packages/delicious_cake/authentication.py'...
***   File "./lib/python3.5/site-packages/delicious_cake/authentication.py", line 434
    except oauth2.Error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/delicious_cake/management'...
Listing './lib/python3.5/site-packages/delicious_cake/management/commands'...
Compiling './lib/python3.5/site-packages/delicious_cake/management/commands/backfill_api_keys.py'...
***   File "./lib/python3.5/site-packages/delicious_cake/management/commands/backfill_api_keys.py", line 23
    print u"Generated a new key for '%s'" % user.username
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/delicious_cake/resources.py'...
***   File "./lib/python3.5/site-packages/delicious_cake/resources.py", line 76
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/delicious_cake/serializers.py'...
***   File "./lib/python3.5/site-packages/delicious_cake/serializers.py", line 183
    except UnsupportedSerializationFormat, e:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/delicious_cake/utils'...
Compiling './lib/python3.5/site-packages/delicious_cake/utils/validate_jsonp.py'...
***   File "./lib/python3.5/site-packages/delicious_cake/utils/validate_jsonp.py", line 209
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 709-712: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/delicious_cake-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
